--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,15 +1,16 @@
 /*App.css */
 
-.navStyle{
+/* .navStyle{
     background-color: rgb(154, 171, 194);
     color: #000;
-}
+} */
 
-.footerStyle{
+
+/* .footerStyle{
     background-color: rgb(60, 74, 82) !important;
     color: #fff !important;
-}
-.nav-intem{
+} */
+/* .nav-intem{
     text-decoration: none;
     color: #fff;
     margin: 0 10px;
@@ -18,4 +19,4 @@
 .nav-intem:hover{
     text-decoration: underline;
     color: #fff;
-}
+} */
